- fix post visible scrollbar on transition - fix hidden comment area in long posts in modal mode

--- a/src/style/5_components/_components.Post.scss
+++ b/src/style/5_components/_components.Post.scss
@@ -55,6 +55,7 @@
 		display: none;
 	}
 	&--on-transition {
+		@extend %hide-scrollbar;
 		position: fixed;
 		z-index: $z-index-post-modal-mode;
 		overflow-y: scroll;
